# example_external_likelihood

./: pyproject.toml  setup.py
test_package/: TestLike.yaml  __init__.py  test_like.py  test_like.yaml
test_package/sub_module/: test_like2.py  test_like2.yaml
test_package/tests/: test.py
